--- a/teste fg/styles.css
+++ b/teste fg/styles.css
@@ -1,16 +1,10 @@
 /* GLOBAL */
 
 html, body{
-    width: 100%;
-    height: 100%;
     text-align: center;
-    position: relative;
-    margin:auto;
-}
-
-.container-fluid {
-    padding: 0px;
     align-content: center;
+    height: 100%;
+    width: 100%;
 }
 
 /* MENU */
@@ -53,6 +47,12 @@ html, body{
 
 /* BANNER ROTATIVO */
 
+h1{
+    height: auto;
+    margin:auto;
+    font-size: 3vw;
+}
+
 .carousel-indicators li {
     bottom: -50px;
     background-color: none;
@@ -85,9 +85,9 @@ html, body{
     grid-template-areas: "titemp titemp"
                          "img descricao "
                          "divisor divisor"
-                         "equipe equipe"
-                         "membros membros"
-                         "fundo fundo";
+                         ". ."
+                         ". ." 
+                         ". .";
     grid-row-gap: 2%;
     grid-column-gap: 2%;
 }
@@ -136,14 +136,10 @@ html, body{
 .equipeinfo{
     grid-area: divisor;
     font-size: 10px;
-    margin: auto;
+    margin: 0;
     text-align: left;
 }
-
-.equipe{
-    grid-area: equipe;
-    margin: auto;
-}
+/* EQUIPE */
 
 #veja{
     font-weight: bold;
@@ -154,27 +150,21 @@ html, body{
     border: 0;
     border-radius: 0;
     margin: auto;
+    margin-top: 30px;
+    height: 50%;
 }
 
-.collapse{
-    padding: 0;
-    margin:0;
+.card-group{
+    width:100%;
 }
 
 .card{
     border:0;
-    padding: 0;
-    margin:0;
+    width:100%;
 }
 
-.membros{
-    display: flex;
-    max-width: 100%;
-}
-
-.membros img{
-    margin: 0;
-    max-width: 100%;
+.card img{
+    width: 100%;
 }
 
 .vejabut{
@@ -186,10 +176,19 @@ html, body{
     margin-left: 7px;
 }
 
+#um{
+    padding-right: 10px;
+}
+
+#dois{
+    padding-right: 10px;
+}
+
+
 /* RODAPÉ */
 
 .rodape{
-    margin-top: 50px;
+    margin: 15px 0 0 0;
     background-color: #ececec;
 }
 
@@ -203,4 +202,158 @@ html, body{
     margin:auto;
     align-items: center;
     padding-top: 20px;
+}
+
+/* Portrait and Landscape */
+
+/* Portrait and Landscape */
+@media screen 
+    and (device-width: 360px) 
+    and (device-height: 640px) 
+    and (-webkit-device-pixel-ratio: 3) {
+
+body{
+    height: width:360px;
+}
+.empresa {
+    width: 56%;
+    margin:auto;
+    display: grid;
+    text-align: center;
+    grid-template-areas: "titemp"
+                         "img"
+                         "descricao"
+                         "divisor"
+                         "."
+                         "." 
+                         ".";
+    grid-row-gap: 2%;
+    grid-column-gap: 2%;
+}
+.mainfoto{
+    width: 90%;
+}
+
+.descricao{
+    text-align: center;
+    padding: 0;
+
+}
+#veja{
+    margin-top: 50px;   
+}
+
+.inicio {
+    width: 56%;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.dados{
+    flex-direction: column;
+    text-align: center;
+}
+
+.inicio img,.fm,.myButton{
+    margin-bottom: 5px;
+}
+
+.carousel-caption{
+    margin:0 0 0 12.8%;
+}
+}
+
+@media (max-width: 580px) {
+    body{
+        height: width:360px;
+    }
+    .empresa {
+        width: 56%;
+        margin:auto;
+        display: grid;
+        text-align: center;
+        grid-template-areas: "titemp"
+                             "img"
+                             "descricao"
+                             "divisor"
+                             "."
+                             "." 
+                             ".";
+        grid-row-gap: 2%;
+        grid-column-gap: 2%;
+    }
+    .mainfoto{
+        width: 90%;
+    }
+    
+    .descricao{
+        text-align: center;
+        padding: 0;
+    
+    }
+    #veja{
+        margin-top: 50px;   
+    }
+    
+    .inicio {
+        width: 56%;
+        display: flex;
+        flex-direction: column;
+    
+    }
+    
+    .dados{
+        flex-direction: column;
+        text-align: center;
+    }
+    
+    .inicio img,.fm,.myButton{
+        margin-bottom: 5px;
+    }
+    
+    .carousel-caption{
+        margin:0 0 0 12.8%;
+    }
+
+    #um, #dois, #tres{
+        padding:0;
+    }
+}
+
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    body{
+      height: 100%;
+    }
+    .empresa {
+        width: 56%;
+        margin:auto;
+        display: grid;
+        text-align: left;
+        grid-template-areas: "titemp"
+                             "img"
+                             "descricao"
+                             "divisor"
+                             "."
+                             "." 
+                             ".";
+        grid-row-gap: 2%;
+        grid-column-gap: 2%;
+    }
+    .empresa.titemp{
+        grid-area: titemp;
+    }
+    .descricao{
+        text-align: center;
+        padding: 0;
+    }
+    .mainfoto{
+        width: 100%;
+}
+#veja{
+    margin-top: 50px;   
+}
 }
